--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   postgres:
-    image: postgres:latest
+    image: postgres:15.1
     environment:
       - POSTGRES_PASSWORD=mypassword
     volumes:
@@ -10,7 +10,7 @@ services:
       - "5432:5432"
 
   redis:
-    image: redis:latest
+    image: redis:7.0.7
     environment:
       - REDIS_PERSISTENCE=1
       - REDIS_PERSISTENCE_DB=1
