--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   postgres:
-    image: postgres:latest
+    image: postgres:15.1
     environment:
       - POSTGRES_PASSWORD=mypassword
     volumes:
@@ -11,7 +11,7 @@ services:
       - "5432:5432"
 
   redis:
-    image: redis:latest
+    image: redis:7.0.7
     environment:
       - REDIS_PERSISTENCE=1
       - REDIS_PERSISTENCE_DB=1
@@ -40,7 +40,7 @@ services:
       - redis
 
   nginx:
-    image: nginx:latest
+    image: nginx:1.23.3
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./static:/app/static
