--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
+      - LOG_LEVEL=${LOG_LEVEL:-DEBUG}
     depends_on:
       - redis
 
