--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-flask-pydantic = "*"
-pydantic = "*"
-redis = "*"
-gunicorn = "*"
+flask = "~=2.2.2"
+flask-pydantic = "~=0.11.0"
+pydantic = "~=1.10.4"
+redis = "~=4.4.2"
+gunicorn = "~=20.1.0"
 
 [dev-packages]
-pytest = "*"
+pytest = "~=7.2.1"
 
 [requires]
-python_version = "3.10"
-python_full_version = "3.10.6"
+python_version = "~=3.10.6"
