--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -25,9 +26,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "engines" : { 
-    "npm" : ">=9.2",
-    "node" : ">=19.3"
+  "engines": {
+    "npm": ">=9.2",
+    "node": ">=19.3"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/validator": "^13.7.10",
     "cypress": "^12.2.0"
   }
 }
