--- a/Pipfile
+++ b/Pipfile
@@ -9,9 +9,11 @@ flask-pydantic = "~=0.11.0"
 pydantic = "~=1.10.4"
 redis = "~=4.4.2"
 gunicorn = "~=20.1.0"
+psycopg = {extras = ["binary"], version = "~=3.1.8"}
 
 [dev-packages]
 pytest = "~=7.2.1"
+yoyo-migrations = "~=8.1.0"
 
 [requires]
 python_version = "~=3.10.6"
