basic functionality working locally with postgres

--- a/yoyo.ini
+++ b/yoyo.ini
@@ -3,4 +3,4 @@ sources = db/migrations
 batch_mode = on
 verbosity = 2
 
-database = postgresql+psycopg://postgres:%(PG_PWD)s@%(PG_HOST)s
+database = postgresql+psycopg://postgres:%(PG_ADMIN_PWD)s@%(PG_HOST)s
