--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -4,6 +4,12 @@ services:
     image: postgres:15.1
     environment:
       - POSTGRES_PASSWORD=mypassword
+    healthcheck:
+      test: [ "CMD", "pg_isready", "-q" ]
+      interval: 1s
+      timeout: 20s
+      retries: 20
+      start_period: 1s
     volumes:
       - postgres-data:/var/lib/postgresql/data
     ports:
@@ -24,6 +30,10 @@ services:
       - "6379:6379"
     links:
       - postgres
+    depends_on:
+#      - postgres
+      postgres:
+        condition: service_healthy
 
 volumes:
   postgres-data:
