--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -4,6 +4,12 @@ services:
     image: postgres:15.1
     environment:
       - POSTGRES_PASSWORD=mypassword
+    healthcheck:
+      test: [ "CMD", "pg_isready", "-q" ]
+      interval: 1s
+      timeout: 20s
+      retries: 20
+      start_period: 1s
     volumes:
       - postgres-data:/var/lib/postgresql/data
     ports:
@@ -11,19 +17,14 @@ services:
 
   redis:
     image: redis:7.0.7
-    environment:
-      - REDIS_PERSISTENCE=1
-      - REDIS_PERSISTENCE_DB=1
-      - REDIS_PERSISTENCE_DB_BACKEND=postgresql
-      - REDIS_PERSISTENCE_DB_USER=postgres
-      - REDIS_PERSISTENCE_DB_PASSWORD=mypassword
-      - REDIS_PERSISTENCE_DB_HOST=postgres
-      - REDIS_PERSISTENCE_DB_PORT=5432
-      - REDIS_PERSISTENCE_DB_NAME=redis
     ports:
       - "6379:6379"
     links:
       - postgres
+    depends_on:
+#      - postgres
+      postgres:
+        condition: service_healthy
 
 volumes:
   postgres-data:
