--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ psycopg = {extras = ["binary"], version = "~=3.1.8"}
 [dev-packages]
 pytest = "~=7.2.1"
 yoyo-migrations = "~=8.1.0"
+pyclean = "~=2.6.0"
 
 [requires]
 python_version = "~=3.10.6"
