--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 services:
   postgres:
+    container_name: postgres
     image: postgres:15.1
     healthcheck:
       test: [ "CMD", "pg_isready", "-q" ]
@@ -10,24 +11,28 @@ services:
       retries: 20
       start_period: 1s
     environment:
+      - PGUSER=postgres
       - POSTGRES_PASSWORD=mypassword
     volumes:
       - postgres-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    networks:
+      - nw
 
   redis:
+    container_name: redis
     image: redis:7.0.7
     ports:
       - "6379:6379"
-    links:
-      - postgres
+    networks:
+      - nw
 
-  flask:
-    build: .
-    command: gunicorn -b :5000 app:app
-    volumes:
-      - .:/app
+  nifty:
+    profiles:
+      - all
+    container_name: nifty
+    image: acartine/nifty:v1
     ports:
       - "5000:5000"
     environment:
@@ -38,20 +43,26 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    networks:
+      - nw
 
   nginx:
+    profiles:
+      - all
+    container_name: nginx
     image: nginx:1.23.3
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./static:/app/static
+      - ./src/static:/app/static
     ports:
       - "8080:80"
     depends_on:
-      - flask
-    links:
-      - flask:flask
+      - nifty
+    networks:
+      - nw
+
+networks:
+  nw:
 
 volumes:
-  static:
   postgres-data:
-
