--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ pydantic = "~=1.10.4"
 redis = "~=4.4.2"
 gunicorn = "~=20.1.0"
 psycopg = {version = "~=3.1.6", extras = ["pool"]}
+redis-lru = "~=0.1.2"
 
 [dev-packages]
 pytest = "~=7.2.1"
