--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,12 @@ services:
   redis:
     container_name: redis
     image: redis:7.0.7
+    healthcheck:
+      test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
+      interval: 1s
+      timeout: 30s
+      retries: 30
+
     ports:
       - "6379:6379"
     networks:
@@ -38,10 +44,13 @@ services:
     environment:
       - PG_HOST=postgres
       - PG_USER=flask_rw
+      - REDIS_HOST=redis
       - FLASK_RW_PWD=local
       - LOG_LEVEL=${LOG_LEVEL:-DEBUG}
     depends_on:
       postgres:
+        condition: service_healthy
+      redis:
         condition: service_healthy
     networks:
       - nw
