using redis w password and acl rules

--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,10 @@ level=DEBUG
 
 [postgres]
 host=$PG_HOST
+pwd=$PG_PWD
 user=$PG_USER
-pwd=$FLASK_RW_PWD
 
 [redis]
 host=$REDIS_HOST
+pwd=$REDIS_PWD
+user=$REDIS_USER
