--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,13 +24,15 @@ services:
     container_name: redis
     image: redis:7.0.7
     healthcheck:
-      test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
+      test: [ "CMD-SHELL", "redis-cli --user healthcheck --pass hclocal ping | grep PONG" ]
       interval: 1s
       timeout: 30s
       retries: 30
-
+    volumes:
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
     ports:
       - "6379:6379"
+    command: [ "redis-server", "/usr/local/etc/redis/redis.conf" ]
     networks:
       - nw
 
@@ -44,8 +46,10 @@ services:
     environment:
       - PG_HOST=postgres
       - PG_USER=flask_rw
+      - PG_PWD=local
       - REDIS_HOST=redis
-      - FLASK_RW_PWD=local
+      - REDIS_USER=flask_rw
+      - REDIS_PWD=local
       - LOG_LEVEL=${LOG_LEVEL:-DEBUG}
     depends_on:
       postgres:
