--- a/local.env
+++ b/local.env
@@ -1,5 +1,7 @@
 LOG_LEVEL=DEBUG
 PG_HOST=localhost
+PG_PWD=local
 PG_USER=flask_rw
-FLASK_RW_PWD=local
-
+REDIS_HOST=localhost
+REDIS_PWD=local
+REDIS_USER=flask_rw
