--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,8 @@ flask-pydantic = "~=0.11.0"
 pydantic = "~=1.10.4"
 redis = "~=4.4.2"
 gunicorn = "~=20.1.0"
-psycopg = {extras = ["binary"], version = "~=3.1.8"}
+psycopg = {version = "~=3.1.6", extras = ["pool"]}
+redis-lru = "~=0.1.2"
 
 [dev-packages]
 pytest = "~=7.2.1"
