change listener supported

--- a/config.ini
+++ b/config.ini
@@ -12,3 +12,9 @@ user=$PG_USER
 host=$REDIS_HOST
 pwd=$REDIS_PWD
 user=$REDIS_USER
+
+[trending]
+size=5
+interval_sec=300
+bucket_len_sec=5
+refresh_sec=3
