untested async worker and splitter

--- a/config.ini
+++ b/config.ini
@@ -17,4 +17,7 @@ user=$REDIS_USER
 size=5
 interval_sec=300
 bucket_len_sec=5
-refresh_sec=3
+listen_interval_sec=3
+
+[splitter]
+listen_interval_sec=3
