refactoring for name consistency and config lookups

--- a/config.ini
+++ b/config.ini
@@ -13,11 +13,11 @@ host=$REDIS_HOST
 pwd=$REDIS_PWD
 user=$REDIS_USER
 
-[trending]
-size=5
-interval_sec=300
+[trend]
 bucket_len_sec=5
 listen_interval_sec=3
+size=5
+toplist_interval_sec=300
 
-[splitter]
+[trend:link]
 listen_interval_sec=3
