got e2e tests working again, need to fix local dev.

--- a/config.ini
+++ b/config.ini
@@ -14,10 +14,13 @@ pwd=$REDIS_PWD
 user=$REDIS_USER
 
 [trend]
-bucket_len_sec=5
 listen_interval_sec=3
 size=5
+toplist_bucket_len_sec=5
 toplist_interval_sec=300
 
-[trend:link]
+[trend_link]
+listen_interval_sec=3
+
+[enrichment]
 listen_interval_sec=3
