--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ redis = "~=4.4.2"
 gunicorn = "~=20.1.0"
 psycopg = {version = "~=3.1.6", extras = ["pool"]}
 redis-lru = "~=0.1.2"
+selenium = "*"
+pillow = "*"
 
 [dev-packages]
 pytest = "~=7.2.1"
