--- a/config.ini
+++ b/config.ini
@@ -13,6 +13,11 @@ host=$REDIS_HOST
 pwd=$REDIS_PWD
 user=$REDIS_USER
 
+[redis-cache]
+host=$REDIS_CACHE_HOST
+pwd=$REDIS_CACHE_PWD
+user=$REDIS_CACHE_USER
+
 [trend]
 listen_interval_sec=3
 size=5
