local runs work with new caching.

--- a/config.ini
+++ b/config.ini
@@ -16,6 +16,7 @@ user=$REDIS_USER
 [redis-cache]
 host=$REDIS_CACHE_HOST
 pwd=$REDIS_CACHE_PWD
+port=$REDIS_CACHE_PORT
 user=$REDIS_CACHE_USER
 
 [trend]
