--- a/redis-cache.conf
+++ b/redis-cache.conf
@@ -962,9 +962,9 @@ replica-priority 100
 #   user alice on -DEBUG +@all ~* >somepassword
 
 user default on +@all ~* &* >mypassword
-user flask_rw on +@read +@write +@pubsub +@transaction ~* &* >local
-user nifty_trend on +@read +@write +@pubsub +@transaction ~* &* >trend
-user nifty_trend_link on +@read +@write +@pubsub +@transaction ~* &* >trend_link
+user flask_cache on +@read +@write +@pubsub +@transaction ~* &* >local_cache
+user nifty_trend_cache on +@read +@write +@pubsub +@transaction ~* &* >trend_cache
+user nifty_trend_link_cache on +@read +@write +@pubsub +@transaction ~* &* >trend_link_cache
 user healthcheck on +PING >hclocal
 
 # Now DEBUG was removed when alice had yet no commands in the set of allowed
