--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ requests = "~=2.28.2"
 scrapy = "~=2.8.0"
 pyright = "*"
 types-redis = "*"
+black = "*"
 
 [requires]
 python_version = "~=3.10.6"
