tightening redis permissions.

--- a/config/redis.conf
+++ b/config/redis.conf
@@ -962,9 +962,9 @@ replica-priority 100
 #   user alice on -DEBUG +@all ~* >somepassword
 
 user default on +@all ~* &* >mypassword
-user flask_rw on +@read +@write +@pubsub +@transaction ~* &* >local
-user nifty_trend on +@read +@write +@pubsub +@transaction ~* &* >trend
-user nifty_trend_link on +@read +@write +@pubsub +@transaction ~* &* >trend_link
+user nifty on +@read ~nifty:trending* +PUBLISH &nifty:action* >nifty
+user nifty_trend on +@read +@write +@transaction ~nifty:trending* ~nifty:claim:trend:* +SUBSCRIBE &nifty:action +PUBLISH &nifty:trend >trend
+user nifty_trend_link on +@read +@write +@transaction ~nifty:claim:trend_link:* +SUBSCRIBE &nifty:trend +PUBLISH &nifty:trend_link >trend_link
 user healthcheck on +PING >hclocal
 
 # Now DEBUG was removed when alice had yet no commands in the set of allowed
