adding full sanity check to makefile, cleaning up some type issues.

--- a/config/redis-cache.conf
+++ b/config/redis-cache.conf
@@ -962,9 +962,7 @@ replica-priority 100
 #   user alice on -DEBUG +@all ~* >somepassword
 
 user default on +@all ~* &* >mypassword
-user flask_cache on +@read +@write +@pubsub +@transaction ~* &* >local_cache
-user nifty_trend_cache on +@read +@write +@pubsub +@transaction ~* &* >trend_cache
-user nifty_trend_link_cache on +@read +@write +@pubsub +@transaction ~* &* >trend_link_cache
+user nifty_cache on +@read +@write +@transaction ~nifty:* >nifty_cache
 user healthcheck on +PING >hclocal
 
 # Now DEBUG was removed when alice had yet no commands in the set of allowed
