--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -20,7 +20,8 @@
   "strict": [
     "src/nifty_common/**",
     "src/nifty/**",
-    "src/nifty_worker/trend/toplist/async**"
+    "src/nifty_worker/trend/toplist/async**",
+    "src/util/**"
   ],
   "stubPath": "typings",
 
