Hotlink previews - prep (#10)

--- a/config/config.ini
+++ b/config/config.ini
@@ -5,10 +5,9 @@ level=DEBUG
 
 [postgres]
 host=$PG_HOST
-pwd=$PG_PWD
-user=$PG_USER
 
 [redis]
 host=$REDIS_HOST
-pwd=$REDIS_PWD
-user=$REDIS_USER
+
+[redis-cache]
+host=$REDIS_CACHE_HOST
