--- a/config/redis-cache.conf
+++ b/config/redis-cache.conf
@@ -962,7 +962,7 @@ replica-priority 100
 #   user alice on -DEBUG +@all ~* >somepassword
 
 user default on +@all ~* &* >mypassword
-user flask_rw on +@read +@write +@pubsub +@transaction ~* &* >local
+user nifty_cache on +@read +@write +@transaction ~nifty:* >nifty_cache
 user healthcheck on +PING >hclocal
 
 # Now DEBUG was removed when alice had yet no commands in the set of allowed
@@ -1120,7 +1120,7 @@ acllog-max-len 128
 # limit for maxmemory so that there is some free RAM on the system for replica
 # output buffers (but this is not needed if the policy is 'noeviction').
 #
-# maxmemory <bytes>
+maxmemory 100mb
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select one from the following behaviors:
@@ -1149,7 +1149,7 @@ acllog-max-len 128
 #
 # The default is:
 #
-# maxmemory-policy noeviction
+maxmemory-policy allkeys-lru
 
 # LRU, LFU and minimal TTL algorithms are not precise algorithms but approximated
 # algorithms (in order to save memory), so you can tune it for speed or
