--- a/Pipfile
+++ b/Pipfile
@@ -7,10 +7,11 @@ name = "pypi"
 flask = "~=2.2.2"
 flask-pydantic = "~=0.11.0"
 pydantic = "~=1.10.4"
-redis = "~=4.4.2"
+redis = "~=4.5.1"
 gunicorn = "~=20.1.0"
 psycopg = {version = "~=3.1.6", extras = ["pool"]}
-redis-lru = "~=0.1.2"
+selenium = "*"
+pillow = "*"
 
 [dev-packages]
 pytest = "~=7.2.1"
@@ -18,6 +19,9 @@ yoyo-migrations = "~=8.1.0"
 pyclean = "~=2.6.0"
 requests = "~=2.28.2"
 scrapy = "~=2.8.0"
+pyright = "*"
+black = "*"
+types-redis = "*"
 
 [requires]
 python_version = "~=3.10.6"
