--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,13 +1,11 @@
 {
   "include": [
-    "src"
+    "nifty"
   ],
   
   "exclude": [
     "**/node_modules",
-    "**/__pycache__",
-    "src/experimental",
-    "src/typestubs"
+    "**/__pycache__"
   ],
 
   "ignore": [
@@ -18,7 +16,7 @@
   },
 
   "strict": [
-    "src/**"
+    "nifty/**"
   ],
   "stubPath": "typings",
 
