--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ gunicorn = "~=20.1.0"
 psycopg = {version = "~=3.1.6", extras = ["pool"]}
 selenium = "*"
 pillow = "*"
+aiorun = "*"
 
 [dev-packages]
 pytest = "~=7.2.1"
