integration test validating basic create

--- a/config/integration_test_config.ini
+++ b/config/integration_test_config.ini
@@ -11,3 +11,7 @@ user=$NIFTY_REDIS_USER
 [redis-cache]
 pwd=$NIFTY_REDIS_CACHE_PWD
 user=$NIFTY_REDIS_CACHE_USER
+
+[integration-test]
+redis_pwd=integration_test
+redis_user=integration_test
