--- a/config/redis.conf
+++ b/config/redis.conf
@@ -20,7 +20,7 @@
 ################################## INCLUDES ###################################
 
 # Include one or more other config files here.  This is useful if you
-# have a standard template that goes to all Redis servers but also need
+# have a standard template that goes to all Redis servers but also needtest
 # to customize a few per-server settings.  Include files can include
 # other files, so use this wisely.
 #
@@ -962,6 +962,7 @@ replica-priority 100
 #   user alice on -DEBUG +@all ~* >somepassword
 
 user default on +@all ~* &* >mypassword
+user integration_test on +@read ~* +@pubsub &* >integration_test
 user nifty on +@read ~nifty:trending* +PUBLISH &nifty:action* >nifty
 user nifty_trend on +@read +@write +@transaction ~nifty:trending* ~nifty:claim:trend:* +SUBSCRIBE &nifty:action +PUBLISH &nifty:trend >trend
 user nifty_trend_link on +@read +@write +@transaction ~nifty:claim:trend_link:* +SUBSCRIBE &nifty:trend +PUBLISH &nifty:trend_link >trend_link
